package com.sebastian.model;

public class Book {

}
