package com.sebastian.model;

public class Loan {

}
