package com.sebastian.model;

public class User {

}
